News UAT/force-app/main/default/objects/Notification_Event_Setting_User__c/Notification_Event_Setting_User__c.object-meta.xml
<CustomObject>
    <label>Notification Event Setting User</label>
    <nameField>
        <displayFormat>NU-{000000}</displayFormat>
        <label>Notification Event Setting User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Event Setting Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>