News UAT/force-app/main/default/objects/Notification_Event_Setting_User__c/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <label>Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Campaign Mgmt Team</fullName>
            </value>
            <value>
                <fullName>PO Mgmt Team</fullName>
            </value>
            <value>
                <fullName>Social Team</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Customers</fullName>
                <isActive>false</isActive>
                <label>Customers</label>
            </value>
            <value>
                <fullName>SEM Team</fullName>
                <isActive>false</isActive>
                <label>SEM Team</label>
            </value>
            <value>
                <fullName>Xtemd Mgmt Team</fullName>
                <isActive>false</isActive>
                <label>Xtemd Mgmt Team</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>