News UAT/force-app/main/default/objects/Notification_Event_Setting_User__c/fields/Notification_Event_Setting__c.field-meta.xml
<CustomField>
    <fullName>Notification_Event_Setting__c</fullName>
    <label>Notification Event Setting</label>
    <referenceTo>Notification_Event_Setting__c</referenceTo>
    <relationshipLabel>Notification Event Setting Users</relationshipLabel>
    <relationshipName>Notification_Event_Setting_Users</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>